--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.dev.js --progress --colors",
-    "build": "webpack --config ./webpack.config.prod.js --progress --colors"
+    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js --progress --colors",
+    "build": "webpack --config ./webpack/webpack.config.prod.js --progress --colors"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "eslint": "^5.4.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.3.5",
     "redux-logger": "^3.0.6",
