--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js --progress --colors",
-    "build": "webpack --config ./webpack/webpack.config.prod.js --progress --colors"
+    "start": "webpack-dev-server --config ./config/webpack.config.dev.js --progress --colors",
+    "build": "webpack --config ./config/webpack.config.prod.js --progress --colors"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
